--- a/Scripts_JS/cronometro/style.css
+++ b/Scripts_JS/cronometro/style.css
@@ -32,3 +32,12 @@
 .boton:hover{
 	box-shadow: 0px 0px 14px #3aad02;
 }
+
+#credits {
+  color: #DDC9B4;
+  font-size: 1.5em;
+  text-align: center;
+  margin-top: 15px;
+  font-style: italic;
+  letter-spacing: 0.5px;
+}
