--- a/Scripts_JS/firma_online/estilo.css
+++ b/Scripts_JS/firma_online/estilo.css
@@ -5,3 +5,12 @@
 .hide {
     display: none;
 }
+
+#credits {
+  color: #DDC9B4;
+  font-size: 0.9em;
+  text-align: center;
+  margin-top: 15px;
+  font-style: italic;
+  letter-spacing: 0.5px;
+}
