--- a/Scripts_JS/temporizador/estilos.css
+++ b/Scripts_JS/temporizador/estilos.css
@@ -1,3 +1,12 @@
 h2#tiempoRestante{
 	font-size: 2rem;
 }
+
+#credits {
+			color: #DDC9B4;
+			font-size: 1.5em;
+			text-align: center;
+			margin-top: 15px;
+			font-style: italic;
+			letter-spacing: 0.5px;
+}
