--- a/Scripts_JS/climapp/index.css
+++ b/Scripts_JS/climapp/index.css
@@ -11,7 +11,7 @@ body {
   background-color: #2A3D45;
 }
 
-.contaier {
+.container {
   background-color: #DDC9B4;
   padding: 20px;
   color: #2A3D45;
@@ -19,7 +19,7 @@ body {
   display: none;
 }
 
-.contaier>.block {
+.container>.block {
   padding: 20px;
 }
 
@@ -48,6 +48,7 @@ body {
 }
 
 .loader {
+  background-color: #2A3D45;
   color: #DDC9B4;
   font-size: 11px;
   text-indent: -99999em;
